# TodoIstApp

./: .gitignore  docker-compose.yml  pyproject.toml
ToDoistApp/: main.py
ToDoistApp/adapters/src/repositories/: task_dynamo_factory.py  task_json_factory.py  task_memory_factory.py  task_repository_factory.py
ToDoistApp/adapters/src/repositories/dynamo/: dynamo_task_repository.py
ToDoistApp/adapters/src/repositories/json/: json_task_repository.py
ToDoistApp/adapters/src/repositories/memory/: memory_task_repository.py
ToDoistApp/core/src/models/: task.py
ToDoistApp/core/src/repository/: task_repository.py
ToDoistApp/core/src/use_cases/: add_task.py  edit_task.py
ToDoistApp/core/tests/use_cases/: test_add_use_case.py  test_edit_task_use_case.py
app/: main.py
app/adapters/src/repositories/: task_dynamo_factory.py  task_json_factory.py  task_memory_factory.py  task_repository_factory.py
app/adapters/src/repositories/dynamo/: dynamo_task_repository.py  operations.py
app/adapters/src/repositories/json/: json_task_repository.py
app/core/src/models/: task.py
app/core/src/repository/: task_repository.py
app/core/src/use_cases/: add_task.py  delete_task.py  edit_task.py  list_task.py
app/core/tests/use_cases/: test_add_use_case.py  test_edit_task_use_case.py  test_list_tasks_use_case.py
infrastructure/: .gitignore  BD.json  dev.Dockerfile  tflocal-requirements.txt
infrastructure/common/dynamo/: main.tf  outputs.tf  variables.tf
infrastructure/dev/: main.tf  terraform.tfvars  variables.tf
infrastructure/scripts/: terraform-local.sh
(+1 files in other folders)
