[tool.poetry]
name = "todoapp"
version = "0.0.1"
description = "Standar Hexagonal Architecture for Python-bases Backend Apps"
authors = ["Ioet"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^7.3.1"
flake8 = "^6.0.0"
black = "^23.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line_length = 100
